Mejorando codigo en UserServiceImpl